--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@reduxjs/toolkit": "^2.6.1",
+    "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.10.0",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.22",
+    "install": "^0.13.0",
     "lucide-react": "^0.484.0",
+    "npm": "^11.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.5.3",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0"
